updated fastfetch, and fixed zshrc

--- a/.config/kitty/kitty-themes/01-Wallust.conf
+++ b/.config/kitty/kitty-themes/01-Wallust.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #F8E3C9
-background         #1F1F1D
-cursor             #8E8472
+foreground         #F8D7D1
+background         #2B2E33
+cursor             #BC9398
 
-active_tab_foreground     #1F1F1D
-active_tab_background     #F8E3C9
-inactive_tab_foreground   #F8E3C9
-inactive_tab_background   #1F1F1D
+active_tab_foreground     #2B2E33
+active_tab_background     #F8D7D1
+inactive_tab_foreground   #F8D7D1
+inactive_tab_background   #2B2E33
 
-active_border_color   #F8E3C9
-inactive_border_color #1F1F1D
-bell_border_color     #171810
+active_border_color   #F8D7D1
+inactive_border_color #2B2E33
+bell_border_color     #142337
 
-color0      #454643
-color1		#171810
-color2		#1B1D14
-color3		#3E4B43
-color4		#754A1A
-color5		#50625A
-color6		#B1824C
-color7		#EDCEAA
-color8		#A69077
-color9		#1F2015
-color10		#24261B
-color11		#536359
-color12		#9C6323
-color13		#6A8278
-color14		#ECAE66
-color15		#EDCEAA
+color0      #505258
+color1		#142337
+color2		#613B47
+color3		#2F5380
+color4		#2F5380
+color5		#2F5380
+color6		#B06A5D
+color7		#ECBEB5
+color8		#A5857F
+color9		#1B2E4A
+color10		#814E5F
+color11		#3F6FAB
+color12		#3F6FAB
+color13		#3F6FAB
+color14		#EA8D7C
+color15		#ECBEB5
