--- a/.config/fastfetch/config-compact.jsonc
+++ b/.config/fastfetch/config-compact.jsonc
@@ -1,14 +1,13 @@
+/* ----------- 💫 https://github.com/JaKooLit 💫 -------- */
+
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
- "logo": {
-  "source": "~/.config/fastfetch/fedora.png",
-  "type": "kitty-direct",
-  "height": 10,
-  "width": 20,
-  "padding": {
-    "top": 1
-    }
-  },
+    "logo": {
+        "padding": {
+            "top": 2
+        },
+        "type": "small"
+    },
     "display": {
         "separator": " -> "
     },
