switch from catpuccin to tokyo night

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -33,6 +33,6 @@ window_padding_width 4
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Macchiato
+# Tokyo Night
 include current-theme.conf
 # END_KITTY_THEME
