--- a/.config/kitty/kitty-themes/01-Wallust.conf
+++ b/.config/kitty/kitty-themes/01-Wallust.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #F8D7D1
-background         #2B2E33
-cursor             #BC9398
+foreground         #FEF3DC
+background         #171515
+cursor             #AC917A
 
-active_tab_foreground     #2B2E33
-active_tab_background     #F8D7D1
-inactive_tab_foreground   #F8D7D1
-inactive_tab_background   #2B2E33
+active_tab_foreground     #171515
+active_tab_background     #FEF3DC
+inactive_tab_foreground   #FEF3DC
+inactive_tab_background   #171515
 
-active_border_color   #F8D7D1
-inactive_border_color #2B2E33
-bell_border_color     #142337
+active_border_color   #FEF3DC
+inactive_border_color #171515
+bell_border_color     #140F0D
 
-color0      #505258
-color1		#142337
-color2		#613B47
-color3		#2F5380
-color4		#2F5380
-color5		#2F5380
-color6		#B06A5D
-color7		#ECBEB5
-color8		#A5857F
-color9		#1B2E4A
-color10		#814E5F
-color11		#3F6FAB
-color12		#3F6FAB
-color13		#3F6FAB
-color14		#EA8D7C
-color15		#ECBEB5
+color0      #3E3C3C
+color1		#140F0D
+color2		#432313
+color3		#283047
+color4		#6C454C
+color5		#A34D3E
+color6		#BCA774
+color7		#F5E6C4
+color8		#ABA189
+color9		#1B1412
+color10		#5A2E19
+color11		#35405F
+color12		#905C66
+color13		#D96752
+color14		#FBDE9A
+color15		#F5E6C4
