--- a/.config/kitty/kitty-themes/01-Wallust.conf
+++ b/.config/kitty/kitty-themes/01-Wallust.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #FEF3DC
-background         #171515
-cursor             #AC917A
+foreground         #F6E0C7
+background         #1D1D1C
+cursor             #BC9A74
 
-active_tab_foreground     #171515
-active_tab_background     #FEF3DC
-inactive_tab_foreground   #FEF3DC
-inactive_tab_background   #171515
+active_tab_foreground     #1D1D1C
+active_tab_background     #F6E0C7
+inactive_tab_foreground   #F6E0C7
+inactive_tab_background   #1D1D1C
 
-active_border_color   #FEF3DC
-inactive_border_color #171515
-bell_border_color     #140F0D
+active_border_color   #F6E0C7
+inactive_border_color #1D1D1C
+bell_border_color     #151710
 
-color0      #3E3C3C
-color1		#140F0D
-color2		#432313
-color3		#283047
-color4		#6C454C
-color5		#A34D3E
-color6		#BCA774
-color7		#F5E6C4
-color8		#ABA189
-color9		#1B1412
-color10		#5A2E19
-color11		#35405F
-color12		#905C66
-color13		#D96752
-color14		#FBDE9A
-color15		#F5E6C4
+color0      #434442
+color1		#151710
+color2		#614018
+color3		#614018
+color4		#526059
+color5		#AC7D48
+color6		#AD7D48
+color7		#EACAA7
+color8		#A48D75
+color9		#1C1E16
+color10		#815520
+color11		#815520
+color12		#6D8076
+color13		#E6A660
+color14		#E6A660
+color15		#EACAA7
