--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -28,6 +28,10 @@ alang=jpn,ja
 #alang=eng,en
 #subs-with-matching-audio=forced
 
+#uosc 
+osd-bar=no 
+border=no 
+
 [Manga]
 profile-desc="Read Manga"
 profile-cond=filename and filename:match('%.cbz$') or filename:match('%.cbr$') or filename:match('%.zip$') or filename:match('%.rar$') ~= nil
