--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -7,9 +7,12 @@ linemode = "size_and_mtime"
 
 [plugin]
 prepend_previewers = [
-    { mime = "audio/*",   run = "exifaudio"},
-	{ mime = "application/*zip",            run = "ouch" },
-	 { name = "*.zip", run = "ouch" },
+{ mime = "audio/*",   run = "exifaudio"},
+{ mime = "application/*zip", run = "ouch" },
+{ name = "*.zip", run = "ouch" },
+{ name = "*.md", run = 'piper -- CLICOLOR_FORCE=1 glow -w=$w -s=dark "$1"' },
+{ name = "*.csv", run  = 'piper -- bat -p --color=always "$1"'},
+{ name = "*/", run  = 'piper -- eza -TL=3 --color=always --icons=always --group-directories-first --no-quotes "$1"'},
 ]
 
 # [opener]
