--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -28,5 +28,10 @@ use = "yazi-rs/plugins:piper"
 rev = "e95c7b3"
 hash = "2143a53182dbbe935a1abd1623424aa5"
 
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "e95c7b3"
+hash = "63b6c222bf2103b3023389dde5e2ecfe"
+
 [flavor]
 deps = []
