--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -4,12 +4,6 @@ for  = "unix"
 run  = 'shell "$SHELL" --block'
 desc = "Open $SHELL here"
 
-#custom shell
-[[mgr.prepend_keymap]]
-on = [ "@" ]
-run = 'plugin custom-shell -- auto --interactive --block'
-desc = "custom-shell as default, interactive, block"
-
 #copy-file-contents
 [[mgr.prepend_keymap]]
 on = "<A-y>"
@@ -27,3 +21,8 @@ desc = "Calc size of selection or cwd"
 on   = "l"
 run  = "plugin smart-enter"
 desc = "Enter the child directory, or open the file"
+
+[[mgr.prepend_keymap]]
+on = "<C-h>"
+run = ["hidden toggle"]
+desc = "Toggle the visibility of hidden content"
