--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -25,3 +25,14 @@ id   = "mime"
 name = "*"
 run  = "mime-ext"
 prio = "high"
+
+# git.yazi
+[[plugin.prepend_fetchers]]
+id   = "git"
+name = "*"
+run  = "git"
+
+[[plugin.prepend_fetchers]]
+id   = "git"
+name = "*/"
+run  = "git"
